sqlx_insert/tests/ui/unsupported_types.stderr
error: proc-macro derive panicked
 --> tests/ui/unsupported_types.rs:4:10
  |
4 | #[derive(SQLInsert, Clone, Debug)]
  |          ^^^^^^^^^
  |
  = help: message: failed to expand SQLInsert macro: Error("enums are not supported")

warning: unused import: `sqlx::Postgres`
 --> tests/ui/unsupported_types.rs:2:5
  |
2 | use sqlx::Postgres;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
